# pwot-talker

./: .gitignore  Makefile  README.md  configure  configure.in
doc/: structures.html  structures.txt
rooms/: god  main  other
src/: Makefile  Makefile.in  baseCommands.c  baseCommands.h  bgTask.c  bgTask.h  colour.c  colour.h  command.c  command.h  event.c  event.h  linkedList.c  linkedList.h  main.c  message.c  message.h  messageSet.c  messageSet.h  misc.c  misc.h  module.c  module.h  msgEdit.c  msgEdit.h  priorityList.c  priorityList.h  pwot.h  revbuf.c  revbuf.h  room.c  room.h  socket.c  socket.h  syslog.c  syslog.h  user.c  user.h
src/modules/: Makefile
src/modules/admin/: Makefile  admin.c
src/modules/sample/: Makefile  sample.c
src/modules/std/: Makefile  std.c
syslog/: boot  debug  info  login
users/: Admin  User
